// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`can handle async actions 1`] = `
Array [
  Object {
    "args": Array [
      "black",
    ],
    "id": 3,
    "name": "startFetch",
    "parentId": 0,
    "rootId": 3,
    "type": "action",
  },
  Object {
    "args": Array [
      "black",
    ],
    "id": 4,
    "name": "fetchData",
    "parentId": 3,
    "rootId": 3,
    "type": "flow_spawn",
  },
  Object {
    "args": Array [
      undefined,
    ],
    "id": 4,
    "name": "fetchData",
    "parentId": 3,
    "rootId": 3,
    "type": "flow_resume",
  },
  Object {
    "args": Array [
      "drinking coffee",
    ],
    "id": 4,
    "name": "fetchData",
    "parentId": 3,
    "rootId": 3,
    "type": "flow_resume",
  },
  Object {
    "args": Array [
      "awake",
    ],
    "id": 4,
    "name": "fetchData",
    "parentId": 3,
    "rootId": 3,
    "type": "flow_return",
  },
]
`;

exports[`can handle erroring actions 1`] = `
Array [
  Object {
    "args": Array [
      "black",
    ],
    "id": 5,
    "name": "startFetch",
    "parentId": 0,
    "rootId": 5,
    "type": "action",
  },
  Object {
    "args": Array [
      "black",
    ],
    "id": 6,
    "name": "fetchData",
    "parentId": 5,
    "rootId": 5,
    "type": "flow_spawn",
  },
  Object {
    "args": Array [
      undefined,
    ],
    "id": 6,
    "name": "fetchData",
    "parentId": 5,
    "rootId": 5,
    "type": "flow_resume",
  },
  Object {
    "args": Array [
      "black",
    ],
    "id": 6,
    "name": "fetchData",
    "parentId": 5,
    "rootId": 5,
    "type": "flow_throw",
  },
]
`;

exports[`can handle nested async actions 1`] = `
Array [
  Object {
    "args": Array [
      "black",
    ],
    "id": 25,
    "name": "startFetch",
    "parentId": 0,
    "rootId": 25,
    "type": "action",
  },
  Object {
    "args": Array [
      "black",
    ],
    "id": 26,
    "name": "fetchData",
    "parentId": 25,
    "rootId": 25,
    "type": "flow_spawn",
  },
  Object {
    "args": Array [
      undefined,
    ],
    "id": 26,
    "name": "fetchData",
    "parentId": 25,
    "rootId": 25,
    "type": "flow_resume",
  },
  Object {
    "args": Array [
      "drinking black",
    ],
    "id": 27,
    "name": "uppercase",
    "parentId": 26,
    "rootId": 25,
    "type": "flow_spawn",
  },
  Object {
    "args": Array [
      undefined,
    ],
    "id": 27,
    "name": "uppercase",
    "parentId": 26,
    "rootId": 25,
    "type": "flow_resume",
  },
  Object {
    "args": Array [
      "DRINKING BLACK",
    ],
    "id": 27,
    "name": "uppercase",
    "parentId": 26,
    "rootId": 25,
    "type": "flow_resume",
  },
  Object {
    "args": Array [
      "DRINKING BLACK",
    ],
    "id": 27,
    "name": "uppercase",
    "parentId": 26,
    "rootId": 25,
    "type": "flow_return",
  },
  Object {
    "args": Array [
      "DRINKING BLACK",
    ],
    "id": 26,
    "name": "fetchData",
    "parentId": 25,
    "rootId": 25,
    "type": "flow_resume",
  },
  Object {
    "args": Array [
      "DRINKING BLACK",
    ],
    "id": 26,
    "name": "fetchData",
    "parentId": 25,
    "rootId": 25,
    "type": "flow_return",
  },
]
`;

exports[`can handle throw from yielded promise works 1`] = `
Array [
  Object {
    "args": Array [
      "black",
    ],
    "id": 11,
    "name": "startFetch",
    "parentId": 0,
    "rootId": 11,
    "type": "action",
  },
  Object {
    "args": Array [
      "black",
    ],
    "id": 12,
    "name": "fetchData",
    "parentId": 11,
    "rootId": 11,
    "type": "flow_spawn",
  },
  Object {
    "args": Array [
      undefined,
    ],
    "id": 12,
    "name": "fetchData",
    "parentId": 11,
    "rootId": 11,
    "type": "flow_resume",
  },
  Object {
    "args": Array [
      "x",
    ],
    "id": 12,
    "name": "fetchData",
    "parentId": 11,
    "rootId": 11,
    "type": "flow_resume_error",
  },
  Object {
    "args": Array [
      "x",
    ],
    "id": 12,
    "name": "fetchData",
    "parentId": 11,
    "rootId": 11,
    "type": "flow_throw",
  },
]
`;

exports[`can handle try catch 1`] = `
Array [
  Object {
    "args": Array [
      "black",
    ],
    "id": 7,
    "name": "startFetch",
    "parentId": 0,
    "rootId": 7,
    "type": "action",
  },
  Object {
    "args": Array [
      "black",
    ],
    "id": 8,
    "name": "fetchData",
    "parentId": 7,
    "rootId": 7,
    "type": "flow_spawn",
  },
  Object {
    "args": Array [
      undefined,
    ],
    "id": 8,
    "name": "fetchData",
    "parentId": 7,
    "rootId": 7,
    "type": "flow_resume",
  },
  Object {
    "args": Array [
      "tea",
    ],
    "id": 8,
    "name": "fetchData",
    "parentId": 7,
    "rootId": 7,
    "type": "flow_resume_error",
  },
  Object {
    "args": Array [
      "biscuit",
    ],
    "id": 8,
    "name": "fetchData",
    "parentId": 7,
    "rootId": 7,
    "type": "flow_return",
  },
]
`;

exports[`empty sequence works 1`] = `
Array [
  Object {
    "args": Array [
      "black",
    ],
    "id": 9,
    "name": "startFetch",
    "parentId": 0,
    "rootId": 9,
    "type": "action",
  },
  Object {
    "args": Array [
      "black",
    ],
    "id": 10,
    "name": "fetchData",
    "parentId": 9,
    "rootId": 9,
    "type": "flow_spawn",
  },
  Object {
    "args": Array [
      undefined,
    ],
    "id": 10,
    "name": "fetchData",
    "parentId": 9,
    "rootId": 9,
    "type": "flow_resume",
  },
  Object {
    "args": Array [
      undefined,
    ],
    "id": 10,
    "name": "fetchData",
    "parentId": 9,
    "rootId": 9,
    "type": "flow_return",
  },
]
`;
